--- a/Tests/SConstruct
+++ b/Tests/SConstruct
@@ -17,4 +17,5 @@ test_env.SConscript('Network/SConstruct')
 test_env.SConscript('Threads/SConstruct')
 test_env.SConscript('Unit/SConstruct')
 test_env.SConscript('Protocol/SConstruct')
-test_env.SConscript('App/SConstruct')
+#test_env.SConscript('App/SConstruct')
+test_env.SConscript('PacketTransfer/SConstruct')
