add a wrong timer implementation, too late

--- a/Tests/SConstruct
+++ b/Tests/SConstruct
@@ -19,3 +19,4 @@ test_env.SConscript('Unit/SConstruct')
 test_env.SConscript('Protocol/SConstruct')
 #test_env.SConscript('App/SConstruct')
 test_env.SConscript('PacketTransfer/SConstruct')
+test_env.SConscript('Basic/SConstruct')
