improved implemetation of PacketTransfer2

--- a/Tests/PacketTransfer2/SConstruct
+++ b/Tests/PacketTransfer2/SConstruct
@@ -6,7 +6,10 @@ test_env.Program("queue_packet_transfer",
 		"queue_packet_transfer.cpp",
 		"PacketHandlerFactory.cpp",
 		"ReceiverBase.cpp",
+		"SenderBase.cpp",
+		"PacketTransferBase.cpp",
 		"PacketServer.cpp",
+		"ClientConnection.cpp",
 		],
 		LIBS = ["framework_network", "basic", "event", "framework_threads", "pthread", "packets", "log4cxx"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
