--- a/Tests/Network/SConstruct
+++ b/Tests/Network/SConstruct
@@ -10,7 +10,10 @@ test_env.Program("simple_packet_transfer",
 
 test_env.Program("echo_server",
 		["EchoServer.cpp"],
-		LIBS = ["framework_network", "basic", "event", "framework_threads", "pthread", "packets", "log4cxx"],
+		LIBS = [
+		"framework_network", "basic", "event",
+		"framework_threads", "pthread", "packets",
+		"llpackets", "log4cxx", "boost_thread-mt"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
 		)
