--- a/Tests/Network/SConstruct
+++ b/Tests/Network/SConstruct
@@ -3,7 +3,10 @@ Import("test_env")
 
 test_env.Program("simple_packet_transfer",
 		["simple_packet_transfer.cpp"],
-		LIBS = ["framework_network", "basic", "event", "framework_threads", "pthread", "packets", "log4cxx"],
+		LIBS = [
+			"framework_network", "basic", "event",
+			"framework_threads", "pthread",
+			"packets", "log4cxx", "llpackets", "boost_thread-mt"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
 		)
@@ -12,8 +15,7 @@ test_env.Program("echo_server",
 		["EchoServer.cpp"],
 		LIBS = [
 		"framework_network", "basic", "event",
-		"framework_threads", "pthread", "packets",
-		"llpackets", "log4cxx", "boost_thread-mt"],
+		"framework_threads", "pthread", "log4cxx"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
 		)
