--- a/Tests/PacketTransfer/SConstruct
+++ b/Tests/PacketTransfer/SConstruct
@@ -7,7 +7,10 @@ test_env.Program("queue_packet_transfer",
 		"PacketHandlerFactory.cpp",
 		"PacketTransfer.cpp",
 		],
-		LIBS = ["framework_network", "basic", "event", "framework_threads", "pthread", "packets", "log4cxx"],
+		LIBS = [
+			"framework_network", "basic", "event",
+			"framework_threads", "pthread", "packets",
+			"log4cxx", "llpackets", "boost_thread-mt"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
 		)
