--- a/Tests/PacketTransfer2/SConstruct
+++ b/Tests/PacketTransfer2/SConstruct
@@ -11,7 +11,10 @@ test_env.Program("queue_packet_transfer",
 		"PacketServer.cpp",
 		"ClientConnection.cpp",
 		],
-		LIBS = ["framework_network", "basic", "event", "framework_threads", "pthread", "packets", "log4cxx"],
+		LIBS = [
+			"framework_network", "basic", "event",
+			"framework_threads", "pthread", "packets",
+			"log4cxx", "llpackets", "boost_thread-mt"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
 		)
