--- a/Tests/FileTransfer/SConstruct
+++ b/Tests/FileTransfer/SConstruct
@@ -1,9 +1,9 @@
 # TODO: should not import
 Import("test_env")
 
-test_env.Program("queue_packet_transfer",
+test_env.Program("file_transfer",
 		[
-		"queue_packet_transfer.cpp",
+		"file_transfer.cpp",
 		"PacketHandlerFactory.cpp",
 		"ReceiverBase.cpp",
 		"SenderBase.cpp",
@@ -14,7 +14,7 @@ test_env.Program("queue_packet_transfer",
 		LIBS = [
 			"framework_network", "basic", "event",
 			"framework_threads", "pthread", "packets",
-			"log4cxx", "llpackets", "boost_thread-mt"],
+			"log4cxx", "filetransferpackets", "boost_thread-mt"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
 		)
