--- a/Tests/SConstruct
+++ b/Tests/SConstruct
@@ -20,4 +20,4 @@ test_env.SConscript('Protocol/SConstruct')
 #test_env.SConscript('App/SConstruct')
 test_env.SConscript('Basic/SConstruct')
 test_env.SConscript('PacketTransfer/SConstruct')
-test_env.SConscript('PacketTransfer2/SConstruct')
+test_env.SConscript('FileTransfer/SConstruct')
