--- a/Tests/PacketTransfer/SConstruct
+++ b/Tests/PacketTransfer/SConstruct
@@ -10,7 +10,7 @@ test_env.Program("queue_packet_transfer",
 		LIBS = [
 			"framework_network", "basic", "event",
 			"framework_threads", "pthread", "packets",
-			"log4cxx", "llpackets", "boost_thread-mt"],
+			"log4cxx", "llpackets", "boost_thread-mt", "uuid"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
 		)
