--- a/Framework/Threads/SConscript
+++ b/Framework/Threads/SConscript
@@ -3,8 +3,8 @@ Import("env")
 files = [	"QueueFactory.cpp",
 			"ThreadManager.cpp",
 			"ThreadWorker.cpp",
-			"Mutex.cpp",
 			"Thread.cpp",
+			"DataControl.cpp",
 			]
 
 env.SharedLibrary("../../lib/framework_threads", files, CPPPATH="../../include")
