prepare to switch basic libs

--- a/Framework/rUDP/SConscript
+++ b/Framework/rUDP/SConscript
@@ -1,7 +1,7 @@
 # TODO: should not import
 Import("env")
 
-env.SharedLibrary("../../lib/packet_transfer",
+env.SharedLibrary("../../lib/rudp",
 		[
 		"PacketHandlerFactory.cpp",
 		"ReceiverBase.cpp",
