--- a/Examples/FileTransfer/SConstruct
+++ b/Examples/FileTransfer/SConstruct
@@ -11,7 +11,7 @@ test_env.Program("file_transfer",
 			"framework_network", "basic", "event",
 			"framework_threads", "pthread", "packets",
 			"log4cxx", "filetransferpackets", "boost_thread-mt",
-			"packet_transfer", "uuid"],
+			"rudp", "uuid"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
 		)
