--- a/Simulator/SConstruct
+++ b/Simulator/SConstruct
@@ -11,7 +11,7 @@ env.Program("simulator",
 			"framework_network", "basic", "event",
 			"framework_threads", "pthread", "packets",
 			"log4cxx", "llpackets", "boost_thread-mt",
-			"packet_transfer", "uuid"],
+			"rudp", "uuid"],
 		CPPPATH = ["../Framework", "../Protocol", "../include"],
 		LIBPATH = ["../lib"],
 		)
