preparing to support windows by using Poco

--- a/Basic/SConscript
+++ b/Basic/SConscript
@@ -2,8 +2,8 @@ Import("env")
 
 files = ["ExceptionBase.cpp",
 		 "Exception.cpp",
-		 "UUID.cpp",
-		 "FanniUUID.cpp",
+		 "ThreadManager.cpp",
+		 "ThreadWorker.cpp",
 		 ]
 
 env.SharedLibrary("../lib/basic",
