--- a/Examples/FileTransfer/SConstruct
+++ b/Examples/FileTransfer/SConstruct
@@ -8,9 +8,8 @@ test_env.Program("file_transfer",
 		"FileTransferClientConnection.cpp",
 		],
 		LIBS = [
-			"framework_network", "basic", "event",
-			"framework_threads", "pthread", "packets",
-			"log4cxx", "filetransferpackets", "boost_thread-mt",
+			"basic", "PocoNetd", "PocoFoundationd", "packets",
+			"log4cxx", "filetransferpackets",
 			"rudp", "uuid"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
