shutdown server properly, improved Examples by introducing Poco::Util::ServerApplication

--- a/Examples/FileTransfer/SConstruct
+++ b/Examples/FileTransfer/SConstruct
@@ -8,8 +8,8 @@ test_env.Program("file_transfer",
 		"FileTransferClientConnection.cpp",
 		],
 		LIBS = [
-			"basic", "PocoNetd", "PocoFoundationd", "packets",
-			"log4cxx", "filetransferpackets",
+			"PocoNetd", "PocoFoundationd", "PocoUtild", "PocoXMLd",
+			"basic", "packets", "log4cxx", "filetransferpackets",
 			"rudp", "uuid"],
 		CPPPATH = ["../../Framework", "../../Protocol", "../../include"],
 		LIBPATH = ["../../lib"],
