--- a/Examples/FileTransfer/FileTransfer.vcproj
+++ b/Examples/FileTransfer/FileTransfer.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="include;..\..\..\ext_libs\include;..\..\Framework\Packets\include;..\..\Basic\include;..\..\Framework\rUDP\include;..\..\Protocol\FTPackets\include"
+				AdditionalIncludeDirectories="..\..\ext_libs\include;include;..\..\Framework\Packets\include;..\..\Basic\include;..\..\Framework\rUDP\include;..\..\Protocol\FTPackets\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;Fanni_DLL;Fanni_EXPORTS;Fanni_Packets_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -61,7 +61,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="..\..\bin\file_transferd.exe"
-				AdditionalLibraryDirectories="..\..\..\ext_libs\lib"
+				AdditionalLibraryDirectories="..\..\ext_libs\lib"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 			/>
