modifications after code review

--- a/Basic/Fanni.Basic.vcproj
+++ b/Basic/Fanni.Basic.vcproj
@@ -245,6 +245,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\fanni\Sleep.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\fanni\ThreadManager.h"
 				>
 			</File>
