defaint Fanni type - EndPoint(Poco::Net::SocketAddress)

--- a/Basic/Fanni.Basic.vcproj
+++ b/Basic/Fanni.Basic.vcproj
@@ -209,6 +209,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\fanni\EndPoint.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\fanni\Event++.h"
 				>
 			</File>
