--- a/Protocol/LLPackets/LLPackets.vcproj
+++ b/Protocol/LLPackets/LLPackets.vcproj
@@ -168,7 +168,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\src\LLPacketFactory.cpp"
+				RelativePath=".\src\LLPackets.cpp"
 				>
 			</File>
 		</Filter>
@@ -177,10 +177,6 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\include\fanni\LLPackets\LLPacketFactory.h"
-				>
-			</File>
 			<File
 				RelativePath=".\include\fanni\LLPackets\LLPackets.h"
 				>
