change logger interface

--- a/Basic/Fanni.Basic.vcproj
+++ b/Basic/Fanni.Basic.vcproj
@@ -187,6 +187,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Logger.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ThreadManager.cpp"
 				>
 			</File>
