--- a/Framework/LLUDP/Fanni.Framework.rUDP.vcproj
+++ b/Framework/LLUDP/Fanni.Framework.rUDP.vcproj
@@ -196,6 +196,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LLUDPBase.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LocalTaskHandler.cpp"
 				>
 			</File>
@@ -205,10 +209,6 @@
 			</File>
 			<File
 				RelativePath=".\src\SystemPacketWorkerBase.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\src\UDPServerBase.cpp"
 				>
 			</File>
 		</Filter>
@@ -259,10 +259,6 @@
 			</File>
 			<File
 				RelativePath=".\include\fanni\LLUDP\UDPData.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\fanni\LLUDP\UDPServerBase.h"
 				>
 			</File>
 		</Filter>
